--- a/projet/src/style.css
+++ b/projet/src/style.css
@@ -2,6 +2,12 @@
     height: 180px; 
 }
 
+html, body{
+    background-color: #000000;
+    color: #ffffff;
+    font-family: 'Roboto', sans-serif;
+}
+
 .axis text,
 .slider text {
   font-size: 18px;
