--- a/projet/src/style.css
+++ b/projet/src/style.css
@@ -26,7 +26,7 @@ h1{
 }
 
 h3{
-  color: #ffa100;
+  color: #ffd300;
 }
 
 /* .axis text,
@@ -72,8 +72,6 @@ h3#paragraphe{
   width: 100%;
 }
 
-@import url('https://fonts.googleapis.com/css2?family=Raleway:wght@400;700&display=swap');
-
 
 button{
   padding: 10px 24px;
@@ -87,12 +85,13 @@ button{
   transition: 0.5s;
   cursor: url(../src/img/taxi.png), auto;
   width: 100px;
+  font-family: 'Roboto Mono', monospace;
 
   
 }
 
 button:hover{
-    background: #ffa100;
+    background: #ffd300;
     color: #050801;
 }
 
@@ -102,4 +101,9 @@ button:hover{
   justify-content: space-around;
   align-items: center;  
   
+}
+
+img{
+  width: 100%;
+  height: 100%;
 }
