--- a/src/style.css
+++ b/src/style.css
@@ -92,6 +92,7 @@ button{
   padding: 10px 24px;
   background-color: #050801;
   color: #f1f2f1;
+  stroke: #ffd300;
   font-weight: bold;
   border: none;
   border-radius: 5px;
