--- a/src/style.css
+++ b/src/style.css
@@ -136,3 +136,17 @@ img{
     border-radius: 5px;
 }
 
+
+.legend {
+  line-height: 18px;
+  color: #555;
+}
+.legend i {
+  width: 18px;
+  height: 18px;
+  float: left;
+  margin-right: 8px;
+  opacity: 0.7;
+}
+
+
